--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -12,12 +12,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
+      - name: Set up JDK 15
         uses: actions/setup-java@v2
         with:
-          java-version: '1.8'
+          java-version: '15'
       - name: Test with Maven
         run: mvn verify 
       - name: Build with Maven
         if: ${{success()}}
-        run: mvn install
+        run: mvn clean test
