--- a/.github/workflows/mai22n.yml
+++ b/.github/workflows/mai22n.yml
@@ -1,27 +1,17 @@
-name: Java CI with Maven2
+name: github
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        java-version: [ 8, 11, 15 ]
+
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Set up JDK
-      uses: actions/setup-java@v1
+    - uses: actions/checkout@v2
+    - uses: actions/setup-java@v1
       with:
-        java-version: 1.8
-    - name: Build with Maven
-      run: mvn package
-    - name: Archive results
-      uses: actions/upload-artifact@v1
-      with:
-        name: artifacts
-        path: target/install
+        java-version: ${{ matrix.java-version }}
